		bytes can't be compressed ar all.

	mbfido:
		Empty *.msg netmails for our own system are dropped with and
		logged (just like received empty netmails). Empty netmails to
		remote systems are still stored in the netmail base.
		Added debug logging for exporting netmails from the messagebase
		so that we later can decide to mark these messages auto deleted.

	mbnntp:
		Does now send the right mime headers recognised by new clients.
		Fixed compile problem with some compilers.

	html:
		Added batch file upload written by Russell Tiedt to the faq.


v0.71.1		28-Nov-2004 - 16-Jan-2005

	porting:
		Compiles more or less on x86_64, there are issues with utmp
		and struct lastlog
		Compiles on NetBSD i386.
		Compiles on Alpha.
		Doesn't compile on Mac OS X.

	upgrade:
		Make sure you remove everything related to bbslist menus from
		your menus and txtfiles.

	general:
		Added port to OpenBSD, is under test (and doesn't work).
		Code cleanup so that compile stops on unknown OSes and CPUs
		instead of missing code parts.
		Added Unix codepage KOI8-R (Russian) and patches from Dmitry
		Komissaroff.
		Updated Copyright notices to 2004 to 2005.

	mbsebbs:
		The creation of the mailout semafore is now after the hangup
		so that mbfido won't start before the bbs is finished.
		Removed bbslist menus, this will become a door.
		Added #define NFGVMIN 1 in openport.
		During hangup we set sighup to ignore.
		Made zmodem-8k downloads work again.
		Some small buffer protections added in addfile.
		Fixed keyboad input for all bigendian machines.
		Patches from Dmitry Komissaroff to make charset translation 
		work on message subject lines.

	mbnewuser:
		During hangup we set sighup to ignore.
		Fixed keyboad input for all bigendian machines.

	mbfile:
		The adopt command now first checks if the filename is 8.3 or a
		long filename and the correct format for import is then set.
		With mbfile import, download counters in files.bbs are skipped.